--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "source": "src/index.js",
   "scripts": {
     "start": "parcel serve --port 8080 src/index.html",
-    "build": "parcel build src/index.html --public-url ./"
+    "build": "parcel build src/index.html --public-url ./",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "lilSeniorj <jesusvarguer18@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "parcel": "^2.7.0",
     "posthtml-include": "^1.7.4"
   }
